--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -8,81 +8,128 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        /* Artistic Background */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f5;
             color: #333;
+            background: linear-gradient(135deg, rgba(255, 230, 240, 0.8), rgba(210, 210, 255, 0.8)),
+                        url('https://www.transparenttextures.com/patterns/skulls.png');
+            background-size: cover;
+            background-attachment: fixed;
+            transition: all 0.3s ease;
         }
+
+        /* Header Styling */
         header {
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            background: linear-gradient(to right, rgba(78, 84, 200, 0.9), rgba(143, 148, 251, 0.9));
             color: #fff;
-            padding: 40px 20px;
+            padding: 60px 20px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            border-bottom-left-radius: 50% 20px;
-            border-bottom-right-radius: 50% 20px;
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+            border-bottom-left-radius: 50% 30px;
+            border-bottom-right-radius: 50% 30px;
         }
+        header h1 {
+            font-size: 3em;
+            letter-spacing: 2px;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+        header p {
+            font-size: 1.3em;
+            margin: 10px 0;
+            opacity: 0.85;
+        }
+
+        /* Navigation Tabs */
         .nav-tabs {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background: rgba(51, 51, 51, 0.85);
             padding: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
             border-radius: 30px;
-            margin: 20px auto;
+            margin: 25px auto;
             width: 90%;
         }
         .nav-tabs button {
             color: #fff;
             background-color: transparent;
             border: none;
-            padding: 10px 25px;
+            padding: 12px 28px;
             margin: 0 15px;
             border-radius: 30px;
             cursor: pointer;
+            font-size: 1.1em;
+            font-weight: bold;
             transition: background-color 0.3s, transform 0.3s;
         }
         .nav-tabs button:hover, .nav-tabs button.active {
-            background-color: #555;
+            background-color: #6b6b6b;
+            color: #ffcc00;
             transform: scale(1.1);
         }
+
+        /* Artistic Container Styling */
         .container {
             display: none;
-            width: 80%;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+            width: 85%;
+            margin: 30px auto;
+            padding: 30px;
+            background: rgba(255, 255, 255, 0.85);
+            border-radius: 20px;
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+            backdrop-filter: blur(5px);
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
+            position: relative;
+            overflow: hidden;
+        }
+        .container:before {
+            content: '';
+            position: absolute;
+            top: -20px;
+            right: -20px;
+            bottom: -20px;
+            left: -20px;
+            background: linear-gradient(to bottom right, rgba(78, 84, 200, 0.2), rgba(255, 210, 240, 0.2));
+            z-index: -1;
+            transform: rotate(5deg);
+            border-radius: 25px;
         }
         .container.active {
             display: block;
+            opacity: 1;
+            transform: translateY(0);
         }
+
+        /* Art Section */
         .art-section {
             padding: 40px;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 25px;
         }
         .project-title {
-            /*text-align: center;*/
-            font-size: 1.8em;
-            margin-bottom: 10px;
+            font-size: 2.2em;
             color: #4e54c8;
+            margin-bottom: 10px;
+            text-shadow: 1px 1px 4px rgba(78, 84, 200, 0.3);
         }
         .art-piece {
-            background: #fff;
-            border-radius: 30px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(to bottom right, #ffffff, #e0e0e5);
+            border-radius: 20px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
             padding: 20px;
-            transition: transform 0.3s ease;
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
             display: flex;
             align-items: center;
         }
         .art-piece:hover {
-            transform: translateY(-10px);
+            transform: translateY(-12px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
         }
         .art-piece img {
             width: 150px;
@@ -90,23 +137,24 @@
             border-radius: 10px;
             margin-right: 20px;
         }
-        .art-piece div {
-            overflow: hidden;
-        }
         .art-piece p {
             margin: 5px 0;
-            font-size: 1em;
+            font-size: 1.1em;
             line-height: 1.6;
         }
+
+        /* Footer Styling */
         footer {
             background-color: #333;
             color: #ccc;
-            padding: 30px;
+            padding: 40px;
             text-align: center;
             margin-top: 40px;
             box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
             border-top-left-radius: 50% 20px;
             border-top-right-radius: 50% 20px;
+            font-size: 1.1em;
+            letter-spacing: 1px;
         }
         footer a {
             color: #ffcc00;
@@ -141,27 +189,22 @@
     </header>
 
     <nav class="nav-tabs">
-        <button onclick="toggleTab('about me')"><i class="fas fa-user"></i> About me</button>
+        <button onclick="toggleTab('about-me')"><i class="fas fa-user"></i> About me</button>
         <button onclick="toggleTab('gallery')"><i class="fas fa-paint-brush"></i> Gallery</button>
         <button onclick="toggleTab('cv')"><i class="fas fa-address-card"></i> CV</button>
         <button onclick="toggleTab('contact')"><i class="fas fa-envelope"></i> Contact</button>
     </nav>
 
-    <div id="about me" class="container active">
-        <h2>Curriculum Vitae</h2>
-        <p>Here you can include information about your education, exhibitions, awards, and other relevant experience.</p>
+    <div id="about-me" class="container active">
+        <h2>About Me</h2>
+        <p>Include information about your education, exhibitions, awards, and other relevant experience.</p>
     </div>
 
     <div id="gallery" class="container">
         <section class="art-section">
             <h2>Projects</h2>
-
-            <!-- Projects Section -->
-
             <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 1">
-                </a>
+                <img src="img/sc1.png" alt="Sculpture 1">
                 <div>
                     <a href="project1.html">
                         <h3 class="project-title">Sculpture 1</h3>
@@ -169,173 +212,14 @@
                     <p>Description of the artwork, the concept behind it, and materials used.</p>
                 </div>
             </div>
-
-
-
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 2">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 2</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 3">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 3</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 4">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 4</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 5">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 5</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 6">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 6</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 7">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 7</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 8">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 8</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 9">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 9</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 10">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 10</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-
-<!--          #****************************************************************************************-->
-
-            <div class="art-piece">
-<!--                <a href="project1.html">-->
-                    <img src="img/sc1.png" alt="Sculpture 11">
-                </a>
-                <div>
-                    <a href="project1.html">
-                        <h3 class="project-title">Sculpture 11</h3>
-                    </a>
-                    <p>Description of the artwork, the concept behind it, and materials used.</p>
-                </div>
-            </div>
-
-
         </section>
     </div>
 
     <div id="cv" class="container">
         <h2>Curriculum Vitae</h2>
-        <p>Here you can include information about your education, exhibitions, awards, and other relevant experience.</p>
+        <p>Include information about your education, exhibitions, awards, and other relevant experience.</p>
     </div>
 
     <div id="contact" class="container">
         <h2>Contact</h2>
-        <p>If you would like to get in touch, please email me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
-        <div>
-            <a href="https://www.instagram.com/mohadese.saber.75/profilecard/?igsh=YW0waXZpZzhwbGE1" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/mohadese-saber-64357b204?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://scholar.google.com/citations?user=covghQcAAAAJ&hl=en&oi=ao" target="_blank"><i class="fab fa-google"></i></a>
-        </div>
-    </footer>
-</body>
-</html>
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example
