--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -8,14 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
-        /* Artistic Background */
+        /* Dark Theme Background */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            color: #333;
-            background: linear-gradient(135deg, rgba(255, 230, 240, 0.8), rgba(210, 210, 255, 0.8)),
-                        url('https://www.transparenttextures.com/patterns/skulls.png');
+            color: #f0f0f0;
+            background: linear-gradient(135deg, #1e1e2f, #2c2c3e);
             background-size: cover;
             background-attachment: fixed;
             transition: all 0.3s ease;
@@ -23,11 +22,11 @@
 
         /* Header Styling */
         header {
-            background: linear-gradient(to right, rgba(78, 84, 200, 0.9), rgba(143, 148, 251, 0.9));
-            color: #fff;
+            background: linear-gradient(to right, #333344, #444466);
+            color: #eaeaea;
             padding: 60px 20px;
             text-align: center;
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
             border-bottom-left-radius: 50% 30px;
             border-bottom-right-radius: 50% 30px;
         }
@@ -35,7 +34,7 @@
             font-size: 3em;
             letter-spacing: 2px;
             margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
         }
         header p {
             font-size: 1.3em;
@@ -47,7 +46,7 @@
         .nav-tabs {
             display: flex;
             justify-content: center;
-            background: rgba(51, 51, 51, 0.85);
+            background: #333344;
             padding: 15px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
             border-radius: 30px;
@@ -55,7 +54,7 @@
             width: 90%;
         }
         .nav-tabs button {
-            color: #fff;
+            color: #eaeaea;
             background-color: transparent;
             border: none;
             padding: 12px 28px;
@@ -67,7 +66,7 @@
             transition: background-color 0.3s, transform 0.3s;
         }
         .nav-tabs button:hover, .nav-tabs button.active {
-            background-color: #6b6b6b;
+            background-color: #444466;
             color: #ffcc00;
             transform: scale(1.1);
         }
@@ -78,9 +77,9 @@
             width: 85%;
             margin: 30px auto;
             padding: 30px;
-            background: rgba(255, 255, 255, 0.85);
+            background: rgba(40, 40, 55, 0.9);
             border-radius: 20px;
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(5px);
             transform: translateY(20px);
             transition: opacity 0.6s ease, transform 0.6s ease;
@@ -94,7 +93,7 @@
             right: -20px;
             bottom: -20px;
             left: -20px;
-            background: linear-gradient(to bottom right, rgba(78, 84, 200, 0.2), rgba(255, 210, 240, 0.2));
+            background: linear-gradient(to bottom right, rgba(50, 50, 70, 0.4), rgba(70, 70, 90, 0.3));
             z-index: -1;
             transform: rotate(5deg);
             border-radius: 25px;
@@ -114,14 +113,14 @@
         }
         .project-title {
             font-size: 2.2em;
-            color: #4e54c8;
+            color: #f3bb05;
             margin-bottom: 10px;
-            text-shadow: 1px 1px 4px rgba(78, 84, 200, 0.3);
+            text-shadow: 1px 1px 4px rgba(255, 102, 102, 0.3);
         }
         .art-piece {
-            background: linear-gradient(to bottom right, #ffffff, #e0e0e5);
+            background: linear-gradient(to bottom right, #38384a, #2d2d3e);
             border-radius: 20px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
             padding: 20px;
             transition: transform 0.4s ease, box-shadow 0.4s ease;
             display: flex;
@@ -129,7 +128,7 @@
         }
         .art-piece:hover {
             transform: translateY(-12px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
         }
         .art-piece img {
             width: 150px;
@@ -141,30 +140,39 @@
             margin: 5px 0;
             font-size: 1.1em;
             line-height: 1.6;
+            color: #eaeaea;
         }
 
         /* Footer Styling */
         footer {
-            background-color: #333;
-            color: #ccc;
+            background-color: #333344;
+            color: #bdb8d7;
             padding: 40px;
             text-align: center;
             margin-top: 40px;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.4);
             border-top-left-radius: 50% 20px;
             border-top-right-radius: 50% 20px;
             font-size: 1.1em;
             letter-spacing: 1px;
         }
+        footer div {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 10px;
+        }
         footer a {
-            color: #ffcc00;
+            color: #f3bb05;
             text-decoration: none;
-            margin: 0 10px;
-            font-size: 1.5em;
+            font-size: 1.2em;
             transition: color 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 5px;
         }
         footer a:hover {
-            color: #fff;
+            color: #ffcc00;
         }
     </style>
     <script>
@@ -200,20 +208,98 @@
         <p>Include information about your education, exhibitions, awards, and other relevant experience.</p>
     </div>
 
+
+
+    <style>
+        /* Fancy Heading Styling */
+        .fancy-heading {
+            font-size: 3em;
+            font-weight: 700;
+            text-align: center;
+            text-transform: uppercase;
+            color: #ff6666;
+            background: linear-gradient(135deg, #ff6666, #ffcc00);
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            position: relative;
+            margin: 0.5em 0;
+            letter-spacing: 2px;
+            transition: transform 0.3s ease;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            animation: glow 2s infinite alternate;
+        }
+
+        .fancy-heading:hover {
+            transform: scale(1.05);
+            text-shadow: 4px 4px 15px rgba(255, 204, 0, 0.7);
+        }
+
+        /* Glowing Effect Animation */
+        @keyframes glow {
+            0% {
+                text-shadow: 0 0 10px rgba(255, 204, 0, 0.5),
+                             0 0 20px rgba(255, 204, 0, 0.4),
+                             0 0 30px rgba(255, 102, 102, 0.3);
+            }
+            100% {
+                text-shadow: 0 0 20px rgba(255, 204, 0, 0.7),
+                             0 0 30px rgba(255, 102, 102, 0.6),
+                             0 0 40px rgba(255, 204, 0, 0.8);
+            }
+        }
+    </style>
+
+<!--          **********************************************************************-->
     <div id="gallery" class="container">
         <section class="art-section">
-            <h2>Projects</h2>
+            <h2 class="fancy-heading">Collections</h2>
+
+
+
             <div class="art-piece">
-                <img src="img/sc1.png" alt="Sculpture 1">
+                <img src="Rhizome%20collection/2.JPG" alt="Rhizome">
                 <div>
                     <a href="project1.html">
-                        <h3 class="project-title">Sculpture 1</h3>
+                        <h3 class="project-title">Rhizome</h3>
                     </a>
                     <p>Description of the artwork, the concept behind it, and materials used.</p>
                 </div>
             </div>
+
+
+<!--          **********************************************************************-->
+            <div class="art-piece">
+                <img src="Tasian/1.JPG" alt="Tassian">
+                <div>
+                    <a href="project2.html">
+                        <h3 class="project-title">Tassian</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
+
+<!--          **********************************************************************-->
+            <div class="art-piece">
+                <img src="Sodat%20/1so.JPG" alt="Tassian">
+                <div>
+                    <a href="project3.html">
+                        <h3 class="project-title">Tassian</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
+
+
+
+
+
         </section>
     </div>
+
+
 
     <div id="cv" class="container">
         <h2>Curriculum Vitae</h2>
@@ -222,4 +308,17 @@
 
     <div id="contact" class="container">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
+        <div>
+            <a href="mailto:your.email@example.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
+            <a href="https://www.instagram.com/your-profile" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://www.linkedin.com/in/your-profile" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://scholar.google.com/citations?user=your-id" target="_blank"><i class="fab fa-google"></i> Google Scholar</a>
+        </div>
+    </footer>
+</body>
+</html>
