--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -282,10 +282,21 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat%20/1so.JPG" alt="Tassian">
+                <img src="Sodat%20/1so.JPG" alt="Sodat">
                 <div>
                     <a href="project3.html">
-                        <h3 class="project-title">Tassian</h3>
+                        <h3 class="project-title">Sodat</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
+
+            <div class="art-piece">
+                <img src="nejin/10nei.JPG" alt="Nejin">
+                <div>
+                    <a href="project4.html">
+                        <h3 class="project-title">Nejin</h3>
                     </a>
                     <p>Description of the artwork, the concept behind it, and materials used.</p>
                 </div>
@@ -314,10 +325,10 @@
     <footer>
         <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
         <div>
-            <a href="mailto:your.email@example.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
-            <a href="https://www.instagram.com/your-profile" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="https://scholar.google.com/citations?user=your-id" target="_blank"><i class="fab fa-google"></i> Google Scholar</a>
+            <a href="https://www.instagram.com/mohadese.saber.75/profilecard/?igsh=YW0waXZpZzhwbGE1" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/mohadese-saber-64357b204?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://scholar.google.com/citations?user=covghQcAAAAJ&hl=en&oi=ao" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+            <a href="mailto:your.email@gmail.com" target="_blank"><i class="fas fa-envelope"></i> </a>
         </div>
     </footer>
 </body>
