--- a/project1.html
+++ b/project1.html
@@ -148,7 +148,7 @@
 </head>
 <body>
     <header>
-        <h1>Title of Sculpture 1</h1>
+        <h1>Rhizome</h1>
         <p>Discover the story behind the artwork</p>
     </header>
 
@@ -159,17 +159,19 @@
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
-            <img src="Rhizome%20collection/1.jpg" alt="Sculpture 1">
-            <img src="Rhizome%20collection/2.jpg" alt="Sculpture 2">
-            <img src="Rhizome%20collection/3.jpg" alt="Sculpture 3">
-            <img src="Rhizome%20collection/4.jpg" alt="Sculpture 4">
-            <img src="Rhizome%20collection/5.jpg" alt="Sculpture 5">
-            <img src="Rhizome%20collection/6.jpg" alt="Sculpture 6">
-            <img src="Rhizome%20collection/-1.jpg" alt="Sculpture -1">
-            <img src="Rhizome%20collection/-2.jpg" alt="Sculpture -2">
-            <img src="Rhizome%20collection/-3.jpg" alt="Sculpture -3">
-            <img src="Rhizome%20collection/-4.jpg" alt="Sculpture -4">
-            <img src="Rhizome%20collection/-5.jpg" alt="Sculpture -5">
+            <img src="Rhizome%20collection/R1.jpg" alt="Sculpture 1">
+            <img src="Rhizome%20collection/R2.jpg" alt="Sculpture 2">
+            <img src="Rhizome%20collection/R3.jpg" alt="Sculpture 3">
+            <img src="Rhizome%20collection/R4.jpg" alt="Sculpture 4">
+            <img src="Rhizome%20collection/R5.jpg" alt="Sculpture 5">
+            <img src="Rhizome%20collection/R6.jpg" alt="Sculpture 6">
+            <img src="Rhizome%20collection/R7.jpg" alt="Sculpture 6">
+            <img src="Rhizome%20collection/R8.jpg" alt="Sculpture 6">
+            <img src="Rhizome%20collection/R-1.jpg" alt="Sculpture -1">
+            <img src="Rhizome%20collection/R-2.jpg" alt="Sculpture -2">
+            <img src="Rhizome%20collection/R-3.jpg" alt="Sculpture -3">
+            <img src="Rhizome%20collection/R-4.jpg" alt="Sculpture -4">
+            <img src="Rhizome%20collection/R-5.jpg" alt="Sculpture -5">
         </div>
 
         <!-- Back to Top Button -->
@@ -179,9 +181,10 @@
     <footer>
         <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
         <div>
-            <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/mohadese.saber.75/profilecard/?igsh=YW0waXZpZzhwbGE1" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/mohadese-saber-64357b204?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://scholar.google.com/citations?user=covghQcAAAAJ&hl=en&oi=ao" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+            <a href="mailto:your.email@gmail.com" target="_blank"><i class="fas fa-envelope"></i> </a>
         </div>
     </footer>
 </body>
