--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -258,7 +258,7 @@
 
 
             <div class="art-piece">
-                <img src="Rhizome%20collection/2.JPG" alt="Rhizome">
+                <img src="Rhizome%20collection/R2.jpg" alt="Rhizome">
                 <div>
                     <a href="project1.html">
                         <h3 class="project-title">Rhizome</h3>
@@ -270,7 +270,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Tasian/1.JPG" alt="Tassian">
+                <img src="Tasian/1.jpg" alt="Tassian">
                 <div>
                     <a href="project2.html">
                         <h3 class="project-title">Tassian</h3>
@@ -282,7 +282,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat%20/1so.JPG" alt="Sodat">
+                <img src="Sodat%20/1so.jpg" alt="Sodat">
                 <div>
                     <a href="project3.html">
                         <h3 class="project-title">Sodat</h3>
@@ -293,7 +293,7 @@
 <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="nejin/10nei.JPG" alt="Nejin">
+                <img src="nejin/10nei.jpg" alt="Nejin">
                 <div>
                     <a href="project4.html">
                         <h3 class="project-title">Nejin</h3>
