--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -282,7 +282,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat%20/1so.jpg" alt="Sodat">
+                <img src="Sodat/1so.jpg" alt="Sodat">
                 <div>
                     <a href="project3.html">
                         <h3 class="project-title">Sodat</h3>
