--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -258,7 +258,7 @@
 
 
             <div class="art-piece">
-                <img src="Rhizome%20collection/R2.jpg" alt="Rhizome">
+                <img src="Rhizome collection/R2.jpg" alt="Rhizome">
                 <div>
                     <a href="project1.html">
                         <h3 class="project-title">Rhizome</h3>
