--- a/project1.html
+++ b/project1.html
@@ -163,7 +163,7 @@
             <img src="Rhizome collection/R2.jpg" alt="Sculpture 2">
             <img src="Rhizome collection/R3.jpg" alt="Sculpture 3">
             <img src="Rhizome collection/R4.jpg" alt="Sculpture 4">
-            <img src="Rhizome collection/R5.jpg" alt="Sculpture 5">
+            <img src="Rhizome%20collection/R5.jpg" alt="Sculpture 5">
             <img src="Rhizome collection/R6.jpg" alt="Sculpture 6">
             <img src="Rhizome%20collection/R7.jpg" alt="Sculpture 7">
             <img src="Rhizome%20collection/R8.jpg" alt="Sculpture 8">
