--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -258,7 +258,7 @@
 
 
             <div class="art-piece">
-                <img src="Rhizome collection/R2.jpg" alt="Rhizome">
+                <img src="Rhizome%20collection/R2.JPG" alt="Rhizome">
                 <div>
                     <a href="project1.html">
                         <h3 class="project-title">Rhizome</h3>
@@ -270,7 +270,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Tasian/1.jpg" alt="Tassian">
+                <img src="Tasian/1.JPG" alt="Tassian">
                 <div>
                     <a href="project2.html">
                         <h3 class="project-title">Tassian</h3>
@@ -282,7 +282,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat/1so.jpg" alt="Sodat">
+                <img src="Sodat%20/1so.JPG" alt="Sodat">
                 <div>
                     <a href="project3.html">
                         <h3 class="project-title">Sodat</h3>
@@ -293,7 +293,7 @@
 <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="nejin/10nei.jpg" alt="Nejin">
+                <img src="nejin/10nei.JPG" alt="Nejin">
                 <div>
                     <a href="project4.html">
                         <h3 class="project-title">Nejin</h3>
@@ -303,8 +303,45 @@
             </div>
 <!--          **********************************************************************-->
 
+          <!--          **********************************************************************-->
+
+            <div class="art-piece">
+                <img src="Chronica/5chr.JPG" alt="Chronoca">
+                <div>
+                    <a href="project5.html">
+                        <h3 class="project-title">Chronoca</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
+
+          <!--          **********************************************************************-->
+
+            <div class="art-piece">
+                <img src="Silent%20Kilogram/Silent%20Kilogram1.jpg" alt="Silent Kilogram">
+                <div>
+                    <a href="project6.html">
+                        <h3 class="project-title">Silent Kilogram</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
 
 
+                    <!--          **********************************************************************-->
+
+            <div class="art-piece">
+                <img src="Shaqaq/Shaqaq1.jpg" alt="Shaqaq">
+                <div>
+                    <a href="project7.html">
+                        <h3 class="project-title">Shaqaq</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
 
 
         </section>
