--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -344,6 +344,18 @@
 <!--          **********************************************************************-->
 
 
+            <div class="art-piece">
+                <img src="Now%20Future/Rumass1.jpg" alt="Rumass">
+                <div>
+                    <a href="project8.html">
+                        <h3 class="project-title">Rumass</h3>
+                    </a>
+                    <p>Description of the artwork, the concept behind it, and materials used.</p>
+                </div>
+            </div>
+<!--          **********************************************************************-->
+
+
         </section>
     </div>
 
