--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -270,7 +270,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Tasian/1.JPG" alt="Tassian">
+                <img src="Tasian/1.jpg" alt="Tassian">
                 <div>
                     <a href="project2.html">
                         <h3 class="project-title">Tassian</h3>
@@ -282,7 +282,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat%20/1so.JPG" alt="Sodat">
+                <img src="Sodat/1so.jpg" alt="Sodat">
                 <div>
                     <a href="project3.html">
                         <h3 class="project-title">Sodat</h3>
@@ -293,10 +293,10 @@
 <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="nejin/10nei.JPG" alt="Nejin">
+                <img src="nejin/10nei.jpg" alt="Neijin">
                 <div>
                     <a href="project4.html">
-                        <h3 class="project-title">Nejin</h3>
+                        <h3 class="project-title">Neijin</h3>
                     </a>
                     <p>Description of the artwork, the concept behind it, and materials used.</p>
                 </div>
@@ -306,7 +306,7 @@
           <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="Chronica/5chr.JPG" alt="Chronoca">
+                <img src="Chronica/5chr.jpg" alt="Chronoca">
                 <div>
                     <a href="project5.html">
                         <h3 class="project-title">Chronoca</h3>
