--- a/project5.html
+++ b/project5.html
@@ -161,7 +161,7 @@
         <div class="image-gallery">
             <img src="Chronica/1chr.jpg" alt="Sculpture 1">
             <img src="Chronica/2chr.jpg" alt="Sculpture 2">
-            <img src="Chronica/3chr.jpg" alt="Sculpture 3">
+            <img src="Chronica/3ch.jpg" alt="Sculpture 3">
             <img src="Chronica/4chr.jpg" alt="Sculpture 4">
             <img src="Chronica/5chr.jpg" alt="Sculpture 5">
 
