--- a/project7.html
+++ b/project7.html
@@ -170,7 +170,7 @@
             <img src="Shaqaq/Shaqaq6.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq7.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq8.jpg" alt="Sculpture 1">
-            <img src="Shaqaq/Shaqaq12.jpg" alt="Sculpture 1">
+            <img src="Shaqaq/Shaqaq12.JPG" alt="Sculpture 1">
 
 
         </div>
