--- a/project7.html
+++ b/project7.html
@@ -161,7 +161,7 @@
         <div class="image-gallery">
             <img src="Shaqaq/2.jpg" alt="Sculpture 1">
             <img src="Shaqaq/3.jpg" alt="Sculpture 1">
-            <img src="Shaqaq/_DSC0621.jpg" alt="Sculpture 1">
+            <img src="Shaqaq/DSC0621.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq1.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq2.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq3.jpg" alt="Sculpture 1">
