--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -199,13 +199,21 @@
     <nav class="nav-tabs">
         <button onclick="toggleTab('about-me')"><i class="fas fa-user"></i> About me</button>
         <button onclick="toggleTab('gallery')"><i class="fas fa-paint-brush"></i> Gallery</button>
+        <button onclick="toggleTab('map')"><i class="fas fa-envelope"></i> Map</button>
         <button onclick="toggleTab('cv')"><i class="fas fa-address-card"></i> CV</button>
         <button onclick="toggleTab('contact')"><i class="fas fa-envelope"></i> Contact</button>
     </nav>
 
-    <div id="about-me" class="container active">
+    <div id="about-me" class="container">
         <h2>About Me</h2>
         <p>Include information about your education, exhibitions, awards, and other relevant experience.</p>
+    </div>
+
+
+    <div id="map" class="container active">
+        <h2>About Me</h2>
+        <iframe src="ir.html" width="100%" height="600" style="border: none; border-radius: 20px;"></iframe>
+
     </div>
 
 
@@ -258,7 +266,7 @@
 
 
             <div class="art-piece">
-                <img src="Rhizome%20collection/R2.jpg" alt="Rhizome">
+                <img src="Rhizome%20collection/R2.JPG" alt="Rhizome">
                 <div>
                     <a href="project1.html">
                         <h3 class="project-title">Rhizome</h3>
@@ -270,7 +278,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Tasian/1.jpg" alt="Tassian">
+                <img src="Tasian/1.JPG" alt="Tassian">
                 <div>
                     <a href="project2.html">
                         <h3 class="project-title">Tassian</h3>
@@ -282,7 +290,7 @@
 
 <!--          **********************************************************************-->
             <div class="art-piece">
-                <img src="Sodat/1so.jpg" alt="Sodat">
+                <img src="Sodat%20/1so.JPG" alt="Sodat">
                 <div>
                     <a href="project3.html">
                         <h3 class="project-title">Sodat</h3>
@@ -293,10 +301,10 @@
 <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="nejin/10nei.jpg" alt="Neijin">
+                <img src="nejin/10nei.JPG" alt="Nejin">
                 <div>
                     <a href="project4.html">
-                        <h3 class="project-title">Neijin</h3>
+                        <h3 class="project-title">Nejin</h3>
                     </a>
                     <p>Description of the artwork, the concept behind it, and materials used.</p>
                 </div>
@@ -306,7 +314,7 @@
           <!--          **********************************************************************-->
 
             <div class="art-piece">
-                <img src="Chronica/5chr.jpg" alt="Chronoca">
+                <img src="Chronica/5chr.JPG" alt="Chronoca">
                 <div>
                     <a href="project5.html">
                         <h3 class="project-title">Chronoca</h3>
