--- a/ir.html
+++ b/ir.html
@@ -6,51 +6,86 @@
     <title>Interactive Map of Iran</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
-        #map {
-            width: 100%;
-            height: 600px;
-            background-color: #989090; /* Set your desired background color here */
-        }
+    #map {
+        width: 80%;
+        height: 600px;
+        background-color: #262637; /* Set your desired background color here */
+        margin: 0 auto; /* Centers the map horizontally */
+        border-radius: 20px; /* Optional: Rounded corners for a softer look */
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.7); /* Optional: Adds a subtle shadow */
+    }
+
         .leaflet-tooltip {
             background-color: transparent;
             border: none;
             font-weight: bold;
             color: #333;
         }
+
+                /* Fancy Heading Styling */
+        .fancy-heading {
+            font-size: 3em;
+            font-weight: 700;
+            text-align: center;
+            text-transform: uppercase;
+            color: #ff6666;
+            background: linear-gradient(135deg, #ff6666, #ffcc00);
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            position: relative;
+            margin: 0.5em 0;
+            letter-spacing: 2px;
+            transition: transform 0.3s ease;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            animation: glow 2s infinite alternate;
+        }
+
+        .fancy-heading:hover {
+            transform: scale(1.05);
+            text-shadow: 4px 4px 15px rgba(255, 204, 0, 0.7);
+        }
     </style>
 </head>
 <body>
 
-<h1>Interactive Map of Iran</h1>
+<!--<h2 class="fancy-heading">Collections</h2>-->
 <div id="map"></div>
 
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <!-- Load GeoJSON Data for Iran's Provinces -->
 <script>
-    // Initialize the map
+    // Initialize the map with a fixed zoom level
     var map = L.map('map', {
-        center: [32.4279, 53.6880], // Center on Iran
-        zoom: 6, // Adjust zoom level as needed
-        zoomControl: true, // Enable zoom controls
-        attributionControl: false // Hide attribution for a cleaner look
+        center: [35.6892, 51.3890], // Center on Iran
+        zoom: 11, // Set fixed zoom level
+        zoomControl: false, // Enable zoom controls
+        attributionControl: true // Hide attribution for a cleaner look
     });
 
     // Load GeoJSON data for Iran's provinces (path set to 'img/districts.json')
     fetch('img/districts.json')
         .then(response => response.json())
         .then(data => {
-            // Add the GeoJSON layer to the map and fit the map bounds to the GeoJSON
+            // Add the GeoJSON layer to the map without adjusting map bounds
             var iranLayer = L.geoJSON(data, {
                 style: function (feature) {
                     return {
                         color: "#000",
                         weight: 1,
-                        fillColor: "#cccccc",
+                        fillColor: "#fbfbfb",
                         fillOpacity: 0.6
                     };
                 },
                 onEachFeature: function (feature, layer) {
+                    // Add a tooltip with the province name
+                    // layer.bindTooltip(feature.properties.name, {
+                    //     permanent: true, // Always visible
+                    //     direction: "center", // Center the tooltip
+                    //     className: "leaflet-tooltip" // Custom class for styling
+                    // });
+
                     // Click event to open a specific page for each province
                     layer.on('click', function () {
                         window.open(feature.properties.name + '.html', '_blank');
@@ -64,14 +99,11 @@
                     });
                     layer.on('mouseout', function () {
                         this.setStyle({
-                            fillColor: '#cccccc'
+                            fillColor: '#c19d9d' // Reset to original fill color
                         });
                     });
                 }
             }).addTo(map);
-
-            // Fit the map view to the GeoJSON layer (Iran's boundaries only)
-            map.fitBounds(iranLayer.getBounds());
         })
         .catch(error => console.log('Error loading GeoJSON data:', error));
 </script>
