--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -227,6 +227,26 @@
             transform: translateY(-5px);
         }
     }
+
+    #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+    .fancy-heading1 {
+            font-size: 2em;
+            font-weight: bold;
+            text-align: center;
+            color: #ffcc00;
+            margin-bottom: 20px;
+        }
     </style>
     <script>
         function toggleTab(tabId) {
@@ -256,6 +276,16 @@
 
     <div id="map" class="container">
       <h2 class="fancy-heading">Ongoing study</h2>
+
+        <div id="description">
+            <h2 class="fancy-heading1">About This project</h2>
+            <p>
+              Street art, as one of the most powerful forms of visual expression, interacts with Henri Lefebvre's "Right to the City" theory, giving citizens the opportunity to use public spaces to voice their social and cultural concerns, thereby influencing the social meaning of urban spaces.
+              The "Dark Side of Tehran" project is part of my research focused on exploring street art and examining its patterns and messages within Tehran's urban environment. This map is designed not only to showcase urban art but also to allow viewers a deeper look into the ongoing social and cultural issues in each area, using street art as a lens to understand the city’s social and economic conditions.
+              This project is the result of my field research aligned with my recent studies on activist art and critical analysis of street art, transforming into an artistic piece. The division of regions in the map reflects the social and economic landscape of Tehran, aiming to portray different artistic perspectives on cultural and social issues and emphasize concepts such as the right to the city and reclaiming public space.
+            </p>
+
+        </div>
         <iframe src="ir.html" width="100%" height="600" style="border: none; border-radius: 20px;"></iframe>
     </div>
 
@@ -265,7 +295,7 @@
 
             <div class="art-piece">
               <a href="project1.html"> </a>
-                <img src="Rhizome%20collection/R2.jpg" alt="Rhizome">
+                <img src="Rhizome%20collection/R2.JPG" alt="Rhizome">
                 <div>
                   <a href="project1.html">
                     <h3 class="project-title">Rhizome</h3>
@@ -278,7 +308,7 @@
 
             <div class="art-piece">
               <a href="project2.html"> </a>
-                <img src="Tasian/1.jpg" alt="Tassian">
+                <img src="Tasian/1.JPG" alt="Tassian">
                 <div>
                   <a href="project2.html">
                     <h3 class="project-title">Tassian</h3>
@@ -290,7 +320,7 @@
 
             <div class="art-piece">
               <a href="project3.html"> </a>
-                <img src="Sodat%20/1so.jpg" alt="Sodat">
+                <img src="Sodat%20/1so.JPG" alt="Sodat">
                 <div>
                   <a href="project3.html">
                     <h3 class="project-title">Sodat</h3>
@@ -301,7 +331,7 @@
 
             <div class="art-piece">
               <a href="project4.html"> </a>
-                <img src="nejin/10nei.jpg" alt="Nejin">
+                <img src="nejin/10nei.JPG" alt="Nejin">
                 <div>
                   <a href="project4.html">
                     <h3 class="project-title">Nejin</h3>
@@ -312,7 +342,7 @@
 
           <div class="art-piece">
               <a href="project5.html"> </a>
-                <img src="Chronica/5chr.jpg" alt="Chronoca">
+                <img src="Chronica/5chr.JPG" alt="Chronoca">
                 <div>
                   <a href="project5.html">
                     <h3 class="project-title">Chronoca</h3>
@@ -352,8 +382,40 @@
                   </a>
                 </div>
           </div>
+
+
+
+          <div class="art-piece">
+              <a href="project9.html"> </a>
+                <img src="Silence%20in%20the%20Front%20Row/Untitled-2%20copy.jpg" alt="Silence in the front row">
+                <div>
+                  <a href="project9.html">
+                    <h3 class="project-title">Silence in the front row</h3>
+                  </a>
+                </div>
+          </div>
+
+
+<!--          <div class="art-piece">-->
+<!--              <a href="project9.html"> </a>-->
+<!--                <img src="Silence%20in%20the%20Front%20Row/Untitled-2%20copy.jpg" alt="Silence in the front row">-->
+<!--                <div>-->
+<!--                  <a href="project9.html">-->
+<!--                    <h3 class="project-title">Silence in the front row</h3>-->
+<!--                  </a>-->
+<!--                </div>-->
+<!--          </div>-->
+<!--        </section>-->
+<!--    </div>-->
+
+
+
         </section>
     </div>
+        </section>
+    </div>
+
+
 
     <div id="about-me" class="container">
         <h2 class="fancy-heading">About Me</h2>
